--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "ejs": "^3.0.2",
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "method-override": "^3.0.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.16"
   }
 }
