--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-<<<<<<< HEAD
-    "ejs": "^3.1.6",
-=======
+  "nodemonConfig": {
+    "ignore":"./src/data/*.json"
+  },
+    "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.0.2",
->>>>>>> 7584abc28fbdb7a8d256a1a3d6a02ea932706f0c
     "express": "^4.17.3",
+    "express-session": "^1.17.2",
+    "express-validator": "^6.14.0",
     "method-override": "^3.0.0",
     "multer": "^1.4.4"
   }
