--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "nodemonConfig": {
-    "ignore":"./src/data/*.json"
+    "ignore": "./src/data/*.json"
   },
-    "dependencies": {
+  "dependencies": {
     "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.0.2",
@@ -19,6 +19,7 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.14.0",
     "method-override": "^3.0.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemon": "^2.0.16"
   }
 }
