--- a/package.json
+++ b/package.json
@@ -1,21 +1,11 @@
 {
-  "name": "central-music-offline",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-<<<<<<< HEAD
-    "ejs": "^3.1.6",
-=======
-    "ejs": "^3.0.2",
->>>>>>> 7584abc28fbdb7a8d256a1a3d6a02ea932706f0c
-    "express": "^4.17.3",
-    "method-override": "^3.0.0",
-    "multer": "^1.4.4"
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
+    "express": "^4.18.1",
+    "express-validator": "^6.14.1",
+    "multer": "^1.4.5-lts.1",
+    "session": "^0.1.0"
   }
 }
